Josh - Create Main

--- a/index.html
+++ b/index.html
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>LuWow!</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>LuWow!</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body id="container">
-  <header>
-    <!-- Start Kirsten -->
+    <header>
+        <!-- Start Kirsten -->
 
-    <!-- end Kirsten -->
-  </header>
-  <main id="shirts">
-    <!-- Start Josh -->
+        <!-- end Kirsten -->
+    </header>
+    <main id="shirts">
+        <div>
+            <img class="shirt" src="images/shirt1.jpg" alt="shirt">
+            <img class="shirt" src="images/shirt2.jpg" alt="shirt">
+            <img class="shirt" src="images/shirt3.jpg" alt="shirt">
+            <img class="shirt" src="images/shirt4.jpg" alt="shirt">
+        </div>
+        <div>
+            <img class="shirt" src="images/shirt5.jpg" alt="shirt">
+            <img class="shirt" src="images/shirt6.jpg" alt="shirt">
+            <img class="shirt" src="images/shirt7.jpg" alt="shirt">
+            <img class="shirt" src="images/shirt8.jpg" alt="shirt">
+        </div>
+    </main>
+    <section id="bio">
+        <!-- Start KC -->
 
-    <!-- End Josh -->
-  </main>
-  <section id="bio">
-    <!-- Start KC -->
+        <!-- end KC -->
+    </section>
+    <section id="pictures">
+        <!-- Jory start -->
 
-    <!-- end KC -->
-  </section>
-  <section id="pictures">
-  <!-- Jory start -->
-
-  <!-- Jory end -->
-  </section>
+        <!-- Jory end -->
+    </section>
 </body>
+
 </html>
